# wasm-game

./: .gitignore  Cargo.toml  package.json  tsconfig.json  webpack.config.js
client/: index.ts
src/: lib.rs
static/: index.html
