# You must change these to your own details.
[package]
name = "wasm-game"
description = "Rust + WebAssembly + Webpack"
version = "0.1.0"
authors = ["Javed"]
categories = ["wasm"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true


[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.60"
features = ["console",
           "Window",
           "Document",
           "HtmlCanvasElement",
           "CanvasRenderingContext2d",
           "Element"]


# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.3.25"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"